# mindsdb-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
mindsdb_cli/: __main__.py
